engine.cs


        [DllImport(EngineDLL, EntryPoint = "GetModelMetaInfo")]
        public static extern Int64 GetModelMetaInfo(Int64 model, out Int64 activeClasses, out Int64 removedClasses, IntPtr activeProperties, IntPtr removedProperties, IntPtr activeInstances, IntPtr removedInstances, IntPtr inactiveInstances);

        [DllImport(EngineDLL, EntryPoint = "GetModelMetaInfo")]
        public static extern Int64 GetModelMetaInfo(Int64 model, IntPtr activeClasses, IntPtr removedClasses, out Int64 activeProperties, out Int64 removedProperties, out Int64 activeInstances, out Int64 removedInstances, out Int64 inactiveInstances);

        [DllImport(EngineDLL, EntryPoint = "GetModelMetaInfo")]
        public static extern Int64 GetModelMetaInfo(Int64 model, IntPtr activeClasses, IntPtr removedClasses, out Int64 activeProperties, out Int64 removedProperties, IntPtr activeInstances, IntPtr removedInstances, IntPtr inactiveInstances);

        [DllImport(EngineDLL, EntryPoint = "GetModelMetaInfo")]
        public static extern Int64 GetModelMetaInfo(Int64 model, IntPtr activeClasses, IntPtr removedClasses, IntPtr activeProperties, IntPtr removedProperties, out Int64 activeInstances, out Int64 removedInstances, out Int64 inactiveInstances);

        [DllImport(EngineDLL, EntryPoint = "GetModelMetaInfo")]
        public static extern Int64 GetModelMetaInfo(Int64 model, IntPtr activeClasses, IntPtr removedClasses, IntPtr activeProperties, IntPtr removedProperties, IntPtr activeInstances, IntPtr removedInstances, IntPtr inactiveInstances);

		//
		//		GetInstanceMetaInfo                         (http://rdf.bg/gkdoc/CS64/GetInstanceMetaInfo.html)
		//
		//	This function is meant for debugging purposes and return statistics during processing.
		//	The return value represents the number of active instances within the model (or zero if the instance was not recognized).
		//
        [DllImport(EngineDLL, EntryPoint = "GetInstanceMetaInfo")]
        public static extern Int64 GetInstanceMetaInfo(Int64 owlInstance, out Int64 allocatedBlocks, out Int64 allocatedBytes);

        [DllImport(EngineDLL, EntryPoint = "GetInstanceMetaInfo")]
        public static extern Int64 GetInstanceMetaInfo(Int64 owlInstance, out Int64 allocatedBlocks, IntPtr allocatedBytes);

        [DllImport(EngineDLL, EntryPoint = "GetInstanceMetaInfo")]
        public static extern Int64 GetInstanceMetaInfo(Int64 owlInstance, IntPtr allocatedBlocks, out Int64 allocatedBytes);

        [DllImport(EngineDLL, EntryPoint = "GetInstanceMetaInfo")]
        public static extern Int64 GetInstanceMetaInfo(Int64 owlInstance, IntPtr allocatedBlocks, IntPtr allocatedBytes);

		//
		//		GetSmoothness                               (http://rdf.bg/gkdoc/CS64/GetSmoothness.html)
		//
		//	This function returns the smoothness of a line or surface.
		//	In case the smoothness can be defined the degree will get assigned either
		//		0 - continuous curve / surface (i.e. degree 9)
		//		1 - the direction of the curve / surface is gradually changing (i.e. degree 1)
		//		2 - the change of direction of the curve / surface is gradually changing (i.e. degree 2)
		//	In return value of this function retuns the dimension of the found smoothness:
		//		0 - smoothness could not be defined
		//		1 - found the smoothness of a curve
		//		2 - found the smoothness of a surface
		//
        [DllImport(EngineDLL, EntryPoint = "GetSmoothness")]
        public static extern Int64 GetSmoothness(Int64 owlInstance, out Int64 degree);

		//
		//		AddState                                    (http://rdf.bg/gkdoc/CS64/AddState.html)
		//
		//	This call will integrate the current state information into the model.
		//
		//	Model should be non-zero.
		//
		//	If owlInstance is given the state is only applied on the owlInstance and all its children.
		//	If owlInstance is zero the state is applied on all owlInstances within a model.
		//
        [DllImport(EngineDLL, EntryPoint = "AddState")]
        public static extern void AddState(Int64 model, Int64 owlInstance);

		//
		//		GetModel                                    (http://rdf.bg/gkdoc/CS64/GetModel.html)
		//
		//
        [DllImport(EngineDLL, EntryPoint = "GetModel")]
        public static extern Int64 GetModel(Int64 owlInstance);

		//
		//		OrderedHandles                              (http://rdf.bg/gkdoc/CS64/OrderedHandles.html)
		//
		//	This call can be used in two ways. The optional arguments classCnt,
		//	propertyCnt and instanceCnt can be used to get the total amount of active classes,
		//	properies and instances available within the model.
		//
		//	The setting and mask can be used to order the handles given for classes,
		//	properties and instances.
		//		1 - if set this will number all classes with possible values [1 .. classCnt]
		//		2 - if set this will number all classes with possible values [1 .. propertyCnt]
		//		4 - if set this will number all classes with possible values [1 .. instanceCnt]
		//
		//	Note: when enabling ordered handles be aware that classes, properties and instances
		//		  can share the same handles, using the correct argument cannot be checked anymore
		//		  by the library itself. This could result in crashes in case of incorrect assignments
		//		  by the hosting application.
		//	Note: internally there is no performance gain / loss. This is purely meant for situations
		//		  where the hosting application can benefit performance wise from having an ordered list.
		//	Note: use in combination with other libraries is not adviced, i.e. when combined with the
		//		  IFC generation from the IFC Engine component for example
		//
        [DllImport(EngineDLL, EntryPoint = "OrderedHandles")]
        public static extern void OrderedHandles(Int64 model, out Int64 classCnt, out Int64 propertyCnt, out Int64 instanceCnt, Int64 setting, Int64 mask);

        [DllImport(EngineDLL, EntryPoint = "OrderedHandles")]
        public static extern void OrderedHandles(Int64 model, out Int64 classCnt, out Int64 propertyCnt, IntPtr instanceCnt, Int64 setting, Int64 mask);

        [DllImport(EngineDLL, EntryPoint = "OrderedHandles")]
        public static extern void OrderedHandles(Int64 model, out Int64 classCnt, IntPtr propertyCnt, out Int64 instanceCnt, Int64 setting, Int64 mask);

        [DllImport(EngineDLL, EntryPoint = "OrderedHandles")]
        public static extern void OrderedHandles(Int64 model, out Int64 classCnt, IntPtr propertyCnt, IntPtr instanceCnt, Int64 setting, Int64 mask);

        [DllImport(EngineDLL, EntryPoint = "OrderedHandles")]
        public static extern void OrderedHandles(Int64 model, IntPtr classCnt, out Int64 propertyCnt, out Int64 instanceCnt, Int64 setting, Int64 mask);

        [DllImport(EngineDLL, EntryPoint = "OrderedHandles")]
        public static extern void OrderedHandles(Int64 model, IntPtr classCnt, out Int64 propertyCnt, IntPtr instanceCnt, Int64 setting, Int64 mask);

        [DllImport(EngineDLL, EntryPoint = "OrderedHandles")]
        public static extern void OrderedHandles(Int64 model, IntPtr classCnt, IntPtr propertyCnt, out Int64 instanceCnt, Int64 setting, Int64 mask);

        [DllImport(EngineDLL, EntryPoint = "OrderedHandles")]
        public static extern void OrderedHandles(Int64 model, IntPtr classCnt, IntPtr propertyCnt, IntPtr instanceCnt, Int64 setting, Int64 mask);

		//
		//		PeelArray                                   (http://rdf.bg/gkdoc/CS64/PeelArray.html)
		//
		//	This function introduces functionality that is missing or complicated in some programming languages.
		//	The attribute inValue is a reference to an array of references. The attribute outValue is a reference to the same array,
		//	however a number of elements earlier or further, i.e. number of elements being attribute elementSize. Be aware that as
		//	we are talking about references the offset is depending on 32 bit / 64 bit compilation.
		//
        [DllImport(EngineDLL, EntryPoint = "PeelArray")]
        public static extern void PeelArray(ref byte[] inValue, out byte outValue, Int64 elementSize);

		//
		//		SetInternalCheck                            (http://rdf.bg/gkdoc/CS64/SetInternalCheck.html)
		//
		//	This function allows to enable or disable several active consistency checks. Enabling the checks can 
		//	introduce performance effects; it is helpfull for and meant for debugging on client side.
		//	If model is zero the consistency checks are set for all open and to be created models.
		//
        [DllImport(EngineDLL, EntryPoint = "SetInternalCheck")]
        public static extern void SetInternalCheck(Int64 model, Int64 setting, Int64 mask);

		//
		//		GetInternalCheck                            (http://rdf.bg/gkdoc/CS64/GetInternalCheck.html)
		//
		//	This function returns all current enabled active consistency checks given the mask the function is 
		//	called for.
		//	When leaving mask and settinbg zero it will return all bits that can be set.
		//
        [DllImport(EngineDLL, EntryPoint = "GetInternalCheck")]
        public static extern Int64 GetInternalCheck(Int64 model, Int64 mask);

		//
		//		GetInternalCheckIssueCnt                    (http://rdf.bg/gkdoc/CS64/GetInternalCheckIssueCnt.html)
		//
		//	This function returns all issues found and not retrieved by the hosting application through 
		//	GetInternalCheckIssue() / GetInternalCheckIssueW().
		//
        [DllImport(EngineDLL, EntryPoint = "GetInternalCheckIssueCnt")]
        public static extern Int64 GetInternalCheckIssueCnt(Int64 model);

		//
		//		GetInternalCheckIssue                       (http://rdf.bg/gkdoc/CS64/GetInternalCheckIssue.html)
		//
		//	This function returns the oldest issues in the list of issues and reduces the list of issues with 1.
		//	The name and description represent the issue as ASCII string, if relevant the relating owlInstance
		//	will be returned through relatedOwlInstance.
		//	Namer, Description and relatedOwlInstance are optional.
		//
        [DllImport(EngineDLL, EntryPoint = "GetInternalCheckIssue")]
        public static extern void GetInternalCheckIssue(Int64 model, out IntPtr name, out IntPtr description, out Int64 relatedOwlInstance);

		//
		//		GetInternalCheckIssueW                      (http://rdf.bg/gkdoc/CS64/GetInternalCheckIssueW.html)
		//
		//	This function returns the oldest issues in the list of issues and reduces the list of issues with 1.
		//	The name and description represent the issue as Unicode string, if relevant the relating owlInstance
		//	will be returned through relatedOwlInstance.
		//	Namer, Description and relatedOwlInstance are optional.
		//
        [DllImport(EngineDLL, EntryPoint = "GetInternalCheckIssueW")]
        public static extern void GetInternalCheckIssueW(Int64 model, out IntPtr name, out IntPtr description, out Int64 relatedOwlInstance);

		//
		//		CloseSession                                (http://rdf.bg/gkdoc/CS64/CloseSession.html)
		//
		//	This function closes the session, after this call the geometry kernel cannot be used anymore.
		//
        [DllImport(EngineDLL, EntryPoint = "CloseSession")]
        public static extern Int64 CloseSession();

		//
		//		CleanMemory                                 (http://rdf.bg/gkdoc/CS64/CleanMemory.html)
		//
		//		This function ..
		//
        [DllImport(EngineDLL, EntryPoint = "CleanMemory")]
        public static extern void CleanMemory();

		//
		//		ClearCache                                  (http://rdf.bg/gkdoc/CS64/ClearCache.html)
		//
		//		This function ..
		//
        [DllImport(EngineDLL, EntryPoint = "ClearCache")]
        public static extern void ClearCache(Int64 model);

        //
        //  File IO / Stream / Copy API Calls
        //
